<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.getorganized.MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/closet_background_port"
        android:scaleType="centerCrop" />

    <LinearLayout
        android:orientation="vertical"
        android:background="#fffaf0"
        android:layout_gravity="end|bottom"
        android:layout_marginRight="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/app_name"
            android:fontFamily="@font/rammettoone"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></TextView>

        <TextView
            android:text="@string/email"
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="This will be your username in the forum"
            android:textSize="12sp" />

        <TextView
            android:text="@string/gender"
            android:textStyle="bold"
            android:layout_gravity="start"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RadioButton
                android:text="@string/male"
                android:textSize="12sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="maleClick"/>

            <RadioButton
                android:text="@string/female"
                android:textSize="12sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="femaleClick"/>

        </RadioGroup>

        <TextView
            android:text="@string/language"
            android:textStyle="bold"
            android:layout_gravity="start"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" 
            android:id="@+id/group"        >

            <RadioButton
                android:text="@string/english"
                android:textSize="12sp"
                android:id="@+id/eng"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <RadioButton
                android:text="简体中文"
                android:textSize="12sp"
                android:id="@+id/chi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </RadioGroup>

        <TextView
            android:text="@string/startintro"
            android:fontFamily="casual"
            android:textSize="12sp"
            android:gravity="start"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/getStarted"
            android:text="@string/getstarted"
            android:textSize="20sp"
            android:textStyle="bold"
            style="@style/NiceButton"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

</FrameLayout>
