<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent"
    >

    <Spinner
        android:id="@+id/kind"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/price_text"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/price_text"
        android:layout_marginTop="23dp" />


    <Spinner
        android:id="@+id/category"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/kind"
        android:layout_alignStart="@+id/kind"
        android:layout_below="@+id/kind"
        android:layout_marginTop="18dp" />

    <TextView
        android:id="@+id/price_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/category"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="34dp"
        android:text="@string/price"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/price_text"
        android:layout_alignLeft="@+id/season"
        android:layout_alignStart="@+id/season"
        android:ems="10"
        android:inputType="number" />

    <EditText
        android:id="@+id/brand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/brand_text"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="" />

    <TextView
        android:id="@+id/brand_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/season_text"
        android:layout_alignEnd="@+id/price_text"
        android:layout_alignRight="@+id/price_text"
        android:layout_marginBottom="15dp"
        android:text="@string/brand"
        android:textSize="20sp" />


    <TextView
        android:id="@+id/season_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/brand_text"
        android:layout_alignStart="@+id/brand_text"
        android:layout_centerVertical="true"
        android:text="@string/season"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/season"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/brand"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="" />

    <TextView
        android:id="@+id/rate_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/price_text"
        android:layout_alignStart="@+id/price_text"
        android:layout_below="@+id/season_text"
        android:layout_marginTop="54dp"
        android:text="@string/rate"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/rate_text"
        android:layout_marginLeft="25dp"
        android:layout_marginStart="25dp"
        android:layout_toEndOf="@+id/rate_text"
        android:layout_toRightOf="@+id/rate_text"
        android:ems="10"
        android:inputType="number"
        tools:ignore="UnknownId" />

    <TextView
        android:id="@+id/note_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/note"
        android:layout_alignLeft="@+id/rate_text"
        android:layout_alignStart="@+id/rate_text"
        android:text="@string/note"
        android:textSize="20sp"
         />

    <EditText
        android:id="@+id/note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/rate"
        android:layout_alignStart="@+id/rate"
        android:layout_below="@+id/rate"
        android:layout_marginTop="26dp"
        android:ems="10"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/season"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/season"
        android:layout_marginBottom="21dp"
        android:text="@string/save" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnSave"
        android:layout_alignBottom="@+id/btnSave"
        android:layout_alignEnd="@+id/note"
        android:layout_alignRight="@+id/note"
        android:text="@string/cancel" />


</RelativeLayout>