<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_marginTop="30dp"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:text="@string/email"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="This will be your username in the forum"
        android:textSize="10sp" />

    <View
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimaryLightest" />

    <TextView
        android:text="Gender: "
        android:textStyle="bold"
        android:layout_gravity="left"
        android:layout_marginTop="0dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <RadioButton
            android:text="@string/male"
            android:textSize="10sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="maleClick" />

        <RadioButton
            android:text="@string/female"
            android:textSize="10sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="femaleClick"/>

    </RadioGroup>

    <View
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimaryLightest" />

    <TextView
        android:text="Language: "
        android:textStyle="bold"
        android:layout_gravity="left"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/group"        >

        <RadioButton
            android:text="English"
            android:textSize="10sp"
            android:id="@+id/eng"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <RadioButton
            android:text="简体中文"
            android:textSize="10sp"
            android:id="@+id/chi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </RadioGroup>


</LinearLayout>
